<resources>
<string name="app_name"> MilkManagement</string>
<string name="create_your">Create your</string>
<string name="account">Account</string>
<string name="individual">Individual</string>
<string name="company">Company</string>
<string name="terms_and_condition">Terms of use</string>
<string name="already_user">Already User?</string>
<string name="login">LOGIN</string>

<string name="buy_a_car">Buy A Car</string>
<string name="sell_car">Sell Your Car</string>
<string name="car_details">Car Details</string>
<string name="add_dealer">Add Dealers</string>
<string name="dealers_list">Dealers List</string>
<string name="dealers_details">Dealer Details</string>

<string name="create_account">Create Account</string>
<string name="select_one">Select One</string>
<string name="user_name">User Name</string>
<string name="email_address">Email Address</string>
<string name="mobile_no">Mobile No.</string>
<string name="password">Password</string>
<string name="submit">Submit</string>
<string name="search">Search</string>

<string name="create_company_account">Creating Company Account</string>
<string name="please_contact_us">please contact us on this number \n +231-456-7890</string>

<string name="otp_verification">OTP Verification</string>
<string name="enter_otp">Enter OTP</string>
<string name="did_not_get_code">Did not get code?</string>
<string name="verified">Verified</string>
<string name="cancel">Cancel</string>

<string name="login_into">Log in to</string>
<string name="username_email">User Name / Email / Mobile No.</string>
<string name="login_small">Login</string>
<string name="forget_password">Forget Password?</string>
<string name="new_user">New user?</string>
<string name="signup">Sign Up</string>
<string name="forgot_pass">Forgot Password</string>
<string name="email">Email</string>
<string name="vehicle_details">Vehicle Details</string>


<string name="title">Title</string>
<string name="brand_name">Brand Name</string>
<string name="model">Model</string>
<string name="price">Price</string>
<string name="description">Description</string>
<string name="add_images">Add Images</string>
<string name="mobile_numner">Mobile Number</string>
<string name="add_your_car">Add Your Car</string>

<string name="car_list">Cars</string>
<string name="my_account">My Account</string>
<string name="my_cars">My Account</string>
<string name="my_fav_cars">My Favourite Cars</string>
<string name="spare_list">Spare Parts</string>
<string name="car_dealers">Car Dealer</string>
<string name="spare_parts_dealers">Spare Parts Dealers</string>

<string name="enter_keyword">Enter Keyword / Ads No.</string>
<string name="dealer_name">Dealer Name</string>
<string name="contact_number">Contact Number</string>
<string name="address">Address</string>
<string name="city">City</string>
<string name="pincode">Pin Code</string>
<string name="add_logo">Add Logo</string>
<string name="dealer_details">Dealer Details</string>
<string name="add_your_dealer">Add Your Dealer</string>

<string name="year">Year</string>
<string name="mileage">Mileage</string>
<string name="body_type">Body Type</string>
<string name="gear_type">Gear Type</string>
<string name="type_your_comment">Type your comment</string>

<string name="dealer">Dealer</string>
<string name="phone_number">Phone Number</string>
<string name="message_to_dealer">Message to Dealer</string>
<string name="message">Message</string>
<string name="order_now">Order Now</string>

<string name="admin_delivery">Admin Delivery</string>
<string name="dealer_delivery">Dealer Delivery</string>
<string name="ads_number">Ads Number</string>
<string name="process">Process</string>
<string name="delivery_form">Delivery\nForm</string>
<string name="delivery_details">Delivery\nDetails</string>
<string name="new_order">New Order</string>
<string name="processed_order">Processed Order</string>
<string name="order_no">Order No.</string>
<string name="ads_no">Ads No.</string>
<string name="action">Action</string>
<string name="dealer_mobile_number">Dealer Mobile Number</string>

<string name="order_number">Order Number</string>
<string name="ads_title">Ads Title</string>
<string name="logout">Log out</string>


<string name="cars">Cars</string>
<string name="spare_parts">Spare Parts</string>
<string name="carr_dealers">Car Dealers</string>
<string name="spare_parts_dealears">Spares Parts Dealers</string>
<string name="settings">Settings</string>
<string name="language">Language</string>
<string name="about_alkrain">About Alkrain</string>
<string name="privacy_policy">Privacy Policy</string>
<string name="terms_of_use">Terms of Use</string>
<string name="contact_us">Contact Us</string>
<string name="dummy_desc_text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</string>


<string name="home">Home</string>
<string name="dealer_list">Dealer List</string>
<string name="update_your_car">Update Your Car</string>
<string name="update_your_spare">Update Your Spare</string>
<string name="messages">Messages</string>
<string name="add_your_spare">Add Your Spare</string>
<string name="no_banner">No Banner Images</string>
<string name="no_image">No Image</string>
<string name="add_spare_part_details">Add Spare Part Details</string>
<string name="add_vehicle_details">Add Vehicle Details</string>
<string name="update_spare_part_details">Update Spare Part Details</string>
<string name="update_vehicle_details">Update Vehicle Details</string>


<string name="spare_part_type">Spare Part Type</string>
<string name="select_brand">Select Brand</string>
<string name="select_color">Select Color</string>
<string name="select_body_type">Select Body Type</string>
<string name="select_gear_type">Select Gear Type</string>
<string name="select_year">Select Year</string>
<string name="select_city">Select City</string>
<string name="select_model">Select Model</string>
<string name="select_spare_part_type">Select Spare Part Type</string>
<string name="original">Original</string>
<string name="copy">Copy</string>
<string name="duplicate">Duplicate</string>
<string name="select_type">Select Type</string>
<string name="exit_dialog_text">Are you sure you want to exit the app?</string>
<string name="ok">Ok</string>
<string name="i_aggress">I Agree</string>
<string name="color">Color</string>


</resources>

