<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:background="@drawable/bg_white"
    android:layout_height="wrap_content">


    <ImageView
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:padding="10dp"
        android:id="@+id/img_close"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:src="@drawable/cross"
        />


    <TextView
        android:id="@+id/tv_otp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_margin="10dp"
        android:textColor="@color/colorLightBlack"
        android:text="@string/otp_verification"
        />

    <TextView
        android:id="@+id/tv_enter_otp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_centerInParent="true"
        android:layout_margin="10dp"
        android:layout_below="@+id/tv_otp"
        android:textColor="@color/colorLightBlack"
        android:text="@string/enter_otp"
        />

    <EditText
        android:padding="10dp"
        android:id="@+id/edt_enter_otp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textSize="16sp"
        android:background="@drawable/edt_border"
        android:inputType="number"
        android:layout_centerInParent="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_below="@+id/tv_enter_otp"
        android:textColor="@color/colorLightBlack"
        />

    <TextView
        android:id="@+id/tv_did_not"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="14sp"
        android:layout_centerInParent="true"
        android:layout_margin="10dp"
        android:layout_below="@+id/edt_enter_otp"
        android:textColor="@color/colorLightBlack"
        android:text="@string/did_not_get_code"
        />


    <Button
        android:id="@+id/btn_verified"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textSize="16sp"
        android:text="@string/verified"
        android:gravity="center"
        android:background="@drawable/btn_red_all_round"
        android:layout_centerInParent="true"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:textAllCaps="false"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:layout_below="@+id/tv_did_not"
        android:textColor="@color/colorWhite"
        />

    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="20dp"
        android:textSize="16sp"
        android:text="@string/cancel"
        android:visibility="gone"
        android:gravity="center"
        android:background="@drawable/edt_border"
        android:layout_centerInParent="true"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:textAllCaps="false"
        android:layout_marginRight="20dp"
        android:layout_below="@+id/btn_verified"
        android:textColor="@color/colorLightBlack"
        />
</RelativeLayout>